Partial refactor to using QDLValues.